--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "devDependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
+    "@linear/sdk": "^38.0.0",
     "@types/jest": "^29.5.14",
     "@vercel/ncc": "^0.38.3",
-    "axios": "^1.8.4",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
